--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@font-face {
+  font-family: "Marlin Geo"; /* Choose a font family name */
+  src: url("../src/assets/fonts/MarlinGeo-Regular.ttf") format("truetype");
+}
+
 body {
+  font-family: "Aerial", sans-serif;
   color: white;
-  font-family: "Arial", sans-serif;
-  overflow-x: hidden;
 }
 
 html {
-  overflow-x: hidden;
   background-color: black;
+  overflow-x: hidden;
 }
